--- a/examples/styles/components/App.scss
+++ b/examples/styles/components/App.scss
@@ -318,6 +318,12 @@ a {
   }
 }
 
+.demo-dropdown {
+  button {
+    margin-right: 12px;
+  }
+}
+
 .demo-block {
   border: solid 1px #eaeefb;
   border-radius: 4px;
