--- a/components/time-picker/style/component.scss
+++ b/components/time-picker/style/component.scss
@@ -1,12 +1,12 @@
-.ui-time-select-wrapper {
+.za-time__select-wrapper {
   min-height: 32px;
 
-  &.ui-select {
+  &.za-select {
     width: 160px;
     line-height: 1;
   }
 
-  .ui-select-selection {
+  .za-select__selection {
     position: relative;
   }
 
@@ -14,7 +14,7 @@
     width: 100%;
   }
 
-  .ui-time-select-icon {
+  .za-time__select-icon {
     position: absolute;
     right: 10px;
     top: 50%;
@@ -25,13 +25,13 @@
   }
 }
 
-.ui-time-select {
+.za-time__select {
   display: flex;
   flex-wrap: nowrap;
   width: 100%;
   border-bottom: 1px solid #e9e9e9;
 
-  .ui-select {
+  .za-select {
     width: 33.333333%;
     flex: 1;
     border-right: 1px solid #e9e9e9;
@@ -40,7 +40,7 @@
       border-right: none;
     }
 
-    .ui-select-selection {
+    .za-select__selection {
       max-height: 192px !important;
       border: none;
       box-shadow: none;
@@ -65,7 +65,7 @@
   }
 }
 
-.ui-select-bottom {
+.za-select__bottom {
   text-align: center;
   line-height: 38px;
 
