chore: add collapseTransition and notification ts type

--- a/examples/styles/components/App.scss
+++ b/examples/styles/components/App.scss
@@ -324,6 +324,11 @@ a {
   }
 }
 
+.demo-form {
+  input,
+  .za-tag-input-box { width: 200px; }
+}
+
 .demo-block {
   border: solid 1px #eaeefb;
   border-radius: 4px;
