--- a/components/form/style/component.scss
+++ b/components/form/style/component.scss
@@ -38,7 +38,7 @@
         line-height: 1;
         color: $base-theme-error;
         font-size: 12px;
-        transition: color .3s $default-transition;
+        //transition: color .3s $default-transition;
       }
     }
   }
