--- a/components/panel/style/component.scss
+++ b/components/panel/style/component.scss
@@ -2,7 +2,6 @@
   border-color: $border;
 
   .ui-panel-header {
-    /*background-color: $background;*/
     border-color: $border;
     color: $color;
   }
@@ -12,22 +11,26 @@
   margin-bottom: 20px;
   background-color: #fff;
   border: 1px solid transparent;
-  box-shadow: 0 1px 1px rgba(0,0,0,.05);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
   line-height: normal;
 
   /* panel themes */
   &.theme-default {
     @include panel-theme($base-btn-default-color, $base-btn-default-bg, $base-btn-default-border);
   }
+
   &.theme-info {
     @include panel-theme($base-btn-info-color, $base-btn-info-bg, $base-btn-info-border);
   }
+
   &.theme-success {
     @include panel-theme($base-btn-success-color, $base-btn-success-bg, $base-btn-success-border);
   }
+
   &.theme-warning {
     @include panel-theme($base-btn-warning-color, $base-btn-warning-bg, $base-btn-warning-border);
   }
+
   &.theme-error {
     @include panel-theme($base-btn-error-color, $base-btn-error-bg, $base-btn-error-border);
   }
@@ -48,6 +51,7 @@
 .ui-panel-header {
   border-bottom: 1px solid #e9e9e9;
 }
+
 .ui-panel-footer {
   border-top: 1px solid #e9e9e9;
 }
