chore: update notification style and form md

--- a/components/style/themes/variable.scss
+++ b/components/style/themes/variable.scss
@@ -76,7 +76,7 @@ $--border-radius-small: 2px !default;
 
 /* -------------  Box Shadow  ------------- */
 $--box-shadow-light: 0 2px 8px rgba(0, 0, 0, .1), 0 0 6px rgba(0, 0, 0, .1) !default;
-$--box-shadow-dark: 0 4px 16px 0 rgba(0, 0, 0, 0.2) !default;
+$--box-shadow-dark: 0 4px 12px rgba(0, 0, 0, 0.2) !default;
 
 /* -------------  Button  ------------- */
 $--button-ghost-disabled-border: #e9e9e9 !default;
