--- a/components/form/style/component.scss
+++ b/components/form/style/component.scss
@@ -14,7 +14,8 @@
 
     .ui-form-item-required {
       color: $base-theme-error;
-      margin-right: 3px;
+      margin-right: 1px;
+      font-size: 6px;
     }
   }
 
