--- a/components/message/style/component.scss
+++ b/components/message/style/component.scss
@@ -6,23 +6,26 @@
   z-index: 1000;
   pointer-events: none;
   transition: opacity 0.3s, transform .3s, right .3s, top 0.4s;
+  animation-duration: 0.3s;
 
-  .za-notification__content {
-    text-align: center;
+  @include b(notification) {
+    @include e(content) {
+      text-align: center;
 
-    &.has-icon {
-      margin-left: 55px;
+      &.has-icon {
+        margin-left: 55px;
+      }
     }
 
-    .za-notification__custom-content {
+    @include e(custom-content) {
       display: inline-block;
       padding: 10px 16px;
       pointer-events: all;
-      font-size: $base-fontSize;
+      font-size: $--font-size-base;
       color: #8391a5;
-      background: #fff;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-      border-radius: 4px;
+      background: $--color-white;
+      box-shadow: $--box-shadow-dark;
+      border-radius: $--border-radius-base;
 
       .za-notification__icon {
         position: static;
@@ -30,11 +33,11 @@
         transform: translate(0, 0);
         margin-right: 8px;
         vertical-align: middle;
-        font-size: 16px;
+        font-size: $--font-size-large;
 
         &.theme-loading {
           animation: rotate360 1s linear infinite;
-          font-size: 14px;
+          font-size: $--font-size-base;
         }
       }
     }
@@ -51,7 +54,12 @@
 
 @keyframes message-in {
   from {
+    opacity: 0;
     transform: translateY(-100%);
+  }
+
+  to {
+    opacity: 1;
   }
 }
 
