--- a/components/notification/style/component.scss
+++ b/components/notification/style/component.scss
@@ -1,20 +1,27 @@
+$notification-width: 384px;
+$notification-padding-vertical: 16px;
+$notification-padding-horizontal: 24px;
+$notification-padding: $notification-padding-vertical $notification-padding-horizontal;
+$notification-margin-bottom: 16px;
+
 @include b(notification) {
-  width: 350px;
-  padding: 16px;
-  box-sizing: border-box;
-  border-radius: $base-radius-xs;
   position: fixed;
+  width: $notification-width;
+  padding: $notification-padding;
+  box-sizing: border-box;
+  border-radius: $--border-radius-base;
   right: 16px;
-  background-color: $base-btn-info-color;
-  box-shadow: $box-shadow-base;
+  background-color: $--color-white;
+  box-shadow: $--box-shadow-dark;
   transition: opacity 0.3s, transform .3s, right .3s, top 0.4s;
+  line-height: $--font-line-height-base;
   overflow: hidden;
 
   @include e(content) {
     margin-left: 0;
 
     &.has-icon {
-      margin-left: 55px;
+      margin-left: 45px;
     }
 
     @include e(close) {
@@ -22,7 +29,8 @@
       z-index: 1000;
       width: 16px;
       height: 16px;
-      right: 16px;
+      top: 16px;
+      right: 22px;
 
       &:hover {
         color: rgba(0, 0, 0, .67);
@@ -32,13 +40,13 @@
     @include e(title) {
       padding-right: 24px;
       font-weight: normal;
-      font-size: $base-fontSize-lg;
+      font-size: $--font-size-large;
       color: #1f2d3d;
       margin: 0;
     }
 
     @include e(custom-content) {
-      font-size: $base-fontSize;
+      font-size: $--font-size-base;
       line-height: 21px;
       margin: 10px 0 0;
       color: #8391a5;
@@ -47,10 +55,9 @@
 
     @include e(icon) {
       position: absolute;
-      left: 20px;
-      top: 50%;
-      transform: translateY(-50%);
-      font-size: 42px;
+      left: 27px;
+      top: 18px;
+      font-size: 24px;
     }
 
     @include e(action-area) {
@@ -70,17 +77,30 @@
 
 @keyframes notification-in {
   from {
+    opacity: 0;
     transform: translateX(100%);
     right: 0;
+  }
+
+  to {
+    opacity: 1;
   }
 }
 
 @keyframes notification-out {
   from {
     opacity: 1;
+    margin-bottom: $notification-margin-bottom;
+    padding-top: $notification-padding;
+    padding-bottom: $notification-padding;
+    max-height: 150px;
   }
 
   to {
     opacity: 0;
+    margin-bottom: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    max-height: 0;
   }
 }
