--- a/components/notification/style/index.scss
+++ b/components/notification/style/index.scss
@@ -1,3 +1,3 @@
-@import '../../style/themes/default';
+@import '../../style/themes/variable';
 @import "../../style/core/mixins/index";
 @import './component';
