--- a/examples/styles/components/App.scss
+++ b/examples/styles/components/App.scss
@@ -156,7 +156,7 @@ a {
 
   pre {
     background-color: transparent;
-    padding: 18px 24px;
+    //padding: 18px 24px;
     line-height: 1.8;
     font-size: 12px;
   }
