--- a/components/input/style/index.scss
+++ b/components/input/style/index.scss
@@ -1,2 +1,5 @@
 @import '../../style/themes/default';
 @import './component';
+@import '../cps/Addon';
+@import '../input-group/InputGroup';
+@import '../input-search/InputSearch';
